--- a/public/ui/frontend/css/style.css
+++ b/public/ui/frontend/css/style.css
@@ -1511,9 +1511,8 @@ a:focus {
   display:flex;
   justify-content:center;
   align-items:center;
-  background:white;
-  padding-top:;
-  padding-bottom:20px;
+  background:#f4f9fc;
+  /* padding-bottom:20px; */
   
 }
 #clock h2
@@ -1523,10 +1522,10 @@ a:focus {
   color: #040000;
   text-align:center;
   margin:10px 0;
-  font-weight: 700;
+  font-weight: 800;
   text-transform: uppercase;
   letter-spacing: 0.4em;
-  font-size: 0.8em;
+  font-size: 1em;
 }
 #clock #time
 {
@@ -1541,11 +1540,11 @@ a:focus {
 #clock #time div span{
   position: relative;
   display: block;
-  width: 70px;
-  height: 40px;
+  width: 80px;
+  height: 60px;
   background: #2196f3;
   color: #fff;
-  font-weight: 300;
+  font-weight: 500;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1556,9 +1555,9 @@ a:focus {
 #clock #time div span:nth-child(2)
 {
   height: 30px;
-  font-size: 0.6em;
+  font-size: 0.7em;
   letter-spacing: 0.3em;
-  font-weight: 500;
+  font-weight: 600;
   z-index: 9;
   box-shadow: none;
   background: #e80f71;
